# WaveformGPT

./: .gitignore  CONTEXT.md  README.md  pyproject.toml  requirements.txt  test_data_pipeline.py
.github/workflows/: waveform-ci.yml
demo/: buddy_demo.py  integration_demo.py  live_demo.py  llm_demo.py  run_demo.py  voice_demo.py
examples/: basic_usage.py  ci_checks.yaml  timing_analysis.py
hardware/: WIRING.md  WIRING_DETAILED.md  run_server.py  test_setup.py
hardware/esp32_audio/: esp32_audio.ino
hardware/esp32_buddy/: esp32_buddy.ino.example
src/waveformgpt/: __init__.py  advanced_analysis.py  analyzer.py  assertions.py  buddy.py  chat.py  circuit_optimizer.py  cli.py  community_dataset.py  compare.py  data_dashboard.py  data_pipeline.py  database.py  debug.py  enhanced_cnn.py  export.py  fst_parser.py  gtkwave.py  image_extractor.py  integrations.py  live.py  llm_engine.py  local_llm.py  nl_parser.py  oscilloscope.py  protocols.py  query_engine.py  regression.py  spice_simulator.py  vcd_parser.py  vision.py  visualize.py  voice.py  waveform_cnn.py  waveformgpt_v2.py
src/waveformgpt/api/: __init__.py  server.py
tests/: __init__.py  test_analyzer.py  test_assertions.py  test_chat.py  test_compare.py  test_export.py  test_protocols.py  test_query_engine.py  test_vcd_parser.py  test_visualize.py
