[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "waveformgpt"
version = "0.1.0"
description = "Query simulation waveforms in natural language"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Tushar Pathak", email = "tushar@example.com"}
]
keywords = ["verilog", "vcd", "waveform", "simulation", "debug", "llm", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "openai>=1.0",
    "numpy>=1.24",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.0",
]
gtkwave = [
    "pyautogui>=0.9",  # For GTKWave automation
]

[project.scripts]
waveformgpt = "waveformgpt.cli:main"

[project.urls]
Homepage = "https://github.com/tusharpathaknyu/waveformgpt"
Repository = "https://github.com/tusharpathaknyu/waveformgpt"
Issues = "https://github.com/tusharpathaknyu/waveformgpt/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/waveformgpt"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=waveformgpt"
